devops/k8s/dev/status.web/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sosadmingui-dev
  labels:
    name: sosadmingui-dev
