devops/k8s/dev/status.web/web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
  namespace: sosadmingui-dev
spec:
  ports:
    - port: 5006
      targetPort: 5006
  type: LoadBalancer
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
  namespace: sosadmingui-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: web
          ports:
            - containerPort: 5006
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5006
              httpHeaders:
              - name: Host
                value: KubernetesReadinessProbe
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5006
            failureThreshold: 3
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthz
              port: 5006
            failureThreshold: 5
            periodSeconds: 10
          resources: {}
      restartPolicy: Always
