devops/k8s/dev/status.web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sosadmingui-ingress
  namespace: sosadmingui-dev
  annotations:
    cert-manager.io/cluster-issuer: vault-slu.se-cluster-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - sosadmingui-dev.wt.artdata.slu.se      
      secretName: private-star.artdata.slu.se-tls
  rules:
  - host: sosadmingui-dev.wt.artdata.slu.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sosadmingui-web
            port:
              number: 5006
